--- a/blog_example/styles.css
+++ b/blog_example/styles.css
@@ -10,6 +10,10 @@ div {
 	border: 1px dashed red;
 }*/
 
+.error {
+	color: red;
+}
+
 .container {
 	width: 80%;
 	margin: 5px auto;
@@ -22,7 +26,7 @@ input[type='submit'], input[type='text'], input[type='password'], .btn {
 	background-color: lightgrey;
 	color: black;
 	padding: 5px;
-	display: block;
+	display: inline-block;
 	text-decoration: none;
 	cursor: pointer;
 	width: 100px;
